--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
+*{
+    background-color: rgba(0, 0, 0, 0.475);
+}
 .header-section{
     height: 70vh;
-    background-color:rgba(0, 0, 0, 0.926) ;
 }
 .header-title{
     font-size: 5rem;
     font-family: 'Dancing Script', cursive;;
+}
+
+.header-container{
+    background-color: rgb(0, 0, 0);
 }
 
