--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-*{
-    background-color: rgba(0, 0, 0, 0.475);
-}
+
 .header-section{
     height: 70vh;
 }
@@ -9,7 +7,10 @@
     font-family: 'Dancing Script', cursive;;
 }
 
-.header-container{
+.header-container, .footer-container{
     background-color: rgb(0, 0, 0);
+}
+.main-container{
+    background-color: rgba(0, 0, 0, 0.94);
 }
 
